--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,26 +1,14 @@
-# 🚀 GitLab CI/CD - نسخه ساده
-# فقط push کن، بقیه‌اش خودکاره!
-
 stages:
   - test
 
-# ═══════════════════════════════════════════════════════════════════════════════
-# 🐍 تست Backend
-# ═══════════════════════════════════════════════════════════════════════════════
 test-backend:
   stage: test
   image: python:3.11-slim
   script:
     - cd backend
     - pip install -q fastapi uvicorn pydantic python-dotenv requests httpx
-    - python -c "import main; print('✅ Backend OK')"
-  only:
-    changes:
-      - backend/**/*
+    - python -c "import main; print('Backend OK')"
 
-# ═══════════════════════════════════════════════════════════════════════════════
-# ⚛️ تست Frontend
-# ═══════════════════════════════════════════════════════════════════════════════
 test-frontend:
   stage: test
   image: node:20-alpine
@@ -28,10 +16,7 @@ test-frontend:
     - cd frontend
     - npm ci --silent
     - npm run build
-  only:
-    changes:
-      - frontend/**/*
   cache:
-    key: ${CI_COMMIT_REF_SLUG}
+    key: "$CI_COMMIT_REF_SLUG"
     paths:
       - frontend/node_modules/
